# bevy-platformer-demo

./: Cargo.toml  devenv.nix  justfile
animation/: Cargo.toml
animation/src/: config.rs  config_direction.rs  handling.rs  lib.rs  prelude.rs  state_machine.rs  state_management.rs  tests.rs
assets/: platformer-demo.ldtk
src/: camera.rs  lib.rs  main.rs  physics.rs  prelude.rs
src/gameplay/: animation.rs  animation_config.rs  level.rs  level_entites.rs  level_entities.rs  level_entitiy_movement.rs  mod.rs  platforms.rs  player.rs  walls.rs
src/gameplay/player/: mod.rs  state_management.rs
src/player/: controller.rs  input.rs  mod.rs  state_management.rs
