[package]
name = "platformer_demo"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["animation"]

[dependencies]
rand = "0.9.0"
bevy = { version = "0.15.3", features = ["wayland", "dynamic_linking"] }
bevy_ecs_ldtk = "0.11.0"
avian2d = { version = "0.2", features = ["debug-plugin"] }
bevy-tnua-avian2d = "0.3.1"
bevy-tnua = "0.22.0"
bevy-inspector-egui = { version = "0.30.0", optional = true }

animation = {path = "./animation/"}

[features]
default = []
debug = ["bevy-inspector-egui"]

# small optimiazations for local code
[profile.dev]
opt-level = 1

# enable high optimiazations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "s"
